<resources>
    <string name="app_name">AppGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_question">Don\'t have an account? Sign Up</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="restablecer_contrasena">Restablecer contraseña</string>
</resources>