<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Entrada de correo -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="8dp" />

    <!-- Entrada de contraseña -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp" />

    <!-- Botón de inicio de sesión -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="16dp" />

    <!-- Texto de registro -->
    <TextView
        android:id="@+id/signUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_question"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:textColor="@color/secondaryTextColor" />

    <!-- Texto de recuperación de contraseña -->
    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_question"
        android:gravity="center"
        android:textColor="@color/secondaryTextColor" />

</LinearLayout>
